# copillust

./: .gitignore  README.md  pyproject.toml  setup_env.sh
autoexp/: README.md  __init__.py  evaluate.py  program.md  results.tsv
autoexp/hypotheses/: bottleneck1_visibility.md  bottleneck2_relation.md  bottleneck3_presence.md
docs/: ARCHITECTURE.md  SETUP.md  dataset.md  model_modify.md  model_modify_task.md  r2a_investigation.md  redesign_proposal.md  task.md
experiments/synth/: README_windows.md  bench_gen.ps1  blender_render.py  diag_nan.py  generate_sketch.py  make_parametric_vrm.py  make_sheet.py  measure_fidelity.py  merge_r2b.py  overlay_gt.py  render_r2b.ps1  run_r2b_gen.ps1  synth_to_coco.py
mydata/: annotations.json
pose_estimation/: __init__.py
pose_estimation/codecs/: __init__.py  visibility_aware_simcc.py  wide_sigma_v1_simcc.py
pose_estimation/core/: __init__.py  base_estimator.py  base_evaluator.py  constants.py  types.py
pose_estimation/data/: __init__.py  coco_utils.py  download.py  merge.py
pose_estimation/evaluation/: __init__.py  metrics.py  subset_evaluator.py  visualizer.py
pose_estimation/inference/: __init__.py  baseline.py  predictor.py
pose_estimation/models/: __init__.py  rtmpose_estimator.py
pose_estimation/training/: __init__.py  augmentations.py  trainer.py
pose_estimation/transforms/: __init__.py  random_edges_blackout.py  visibility_weight_control.py
scripts/_deprecated/: benchmark_bp_test.py  evaluate_bp_paper.py  evaluate_bp_test.py  evaluate_stage_b.py  evaluate_stage_c.py  evaluate_with_gt.py  (+2 more)
(+313 files in other folders)
